--- a/package.json
+++ b/package.json
@@ -12,11 +12,22 @@
     "author": "Andrei Auchynnikau",
     "keywords": [],
     "license": "ISC",
-    "devDependencies": {
-        "nodemon": "^2.0.16"
-    },
     "dependencies": {
-        "@nut-tree/nut-js": "^2.3.0",
+        "@nut-tree/nut-js": "^3.0.0",
+        "dotenv": "^16.0.3",
+        "jimp": "^0.16.2",
         "ws": "^8.8.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.18",
+        "@typescript-eslint/eslint-plugin": "^5.48.2",
+        "@typescript-eslint/parser": "^5.48.2",
+        "eslint": "^8.32.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.16",
+        "prettier": "^2.8.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
     }
 }
